--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 ---
 title: Home page
+color: blue
 ---
 
 <h1>{{ site.title }}</h1>
+
 <h2>{{ page.title }}</h2>
+
+<p> My favorite color is {{page.color}}. My email address is {{site.email}}. A little me: {{site.description}}. </p>
