--- a/index.html
+++ b/index.html
@@ -11,4 +11,4 @@ color: blue
 
 <p> My favorite color is {{page.color}}. My email address is {{site.email}}. A little me: {{site.description}}. </p>
 
-{% include footer.html}
+{% include footer.html %}
