--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@ color: blue
 layout: default
 ---
 
-<h1>{{ site.title }}</h1>
-<h2>{{ page.title }}</h2>
 <p> My favorite color is {{page.color}}. My email address is {{site.email}}. A little me: {{site.description}}. </p>
+
+<ul>
+  {% for post in site.posts %}
+    <li>
+      <a href="{{ post.url }}">{{ post.title }}</a>
+    </li>
+  {% endfor %}
+</ul>
