--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@ layout: default
 
 <ul>
   {% for post in site.posts %}
+    <img src="{{page.image}}" alt="">
     <li>
-      <img src="{{post.image}}" alt="">
       <a href="{{ post.url }}">{{ post.title }}</a>
     </li>
   {% endfor %}
