--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ layout: default
 
 <ul>
   {% for post in site.posts %}
-    <img src="{{page.image}}" alt="">
+    <img src="{{post.image}}" alt="">
     <li>
       <a href="{{ post.url }}">{{ post.title }}</a>
     </li>
