--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ title: Home page
 color: blue
 layout: default
 ---
-<h1>page.title</h1>
+<h1>{{ page.title }}</h1>
 
 <p> My favorite color is {{page.color}}. My email address is {{site.email}}. A little me: {{site.description}}. </p>
 
