--- a/blog.html
+++ b/blog.html
@@ -3,3 +3,10 @@ title: Blog
 layout: default
 ---
 
+<ul>
+  {% for post in site.posts %}
+    <li>
+      <a href="{{ post.url }}">{{ post.title }}</a>
+    </li>
+  {% endfor %}
+</ul>
