--- a/index.html
+++ b/index.html
@@ -7,13 +7,6 @@ layout: front-page
 
 <p> My favorite color is {{page.color}}. My email address is {{site.email}}. A little me: {{site.description}}. </p>
 
-<ul>
-  {% for post in site.posts %}
-    <li>
-      <a href="{{ post.url }}">{{ post.title }}</a>
-    </li>
-  {% endfor %}
-</ul>
+<p>To learn mor about Jekyll go to <a href="http://jekyllrb.com">Jekyllrb</a>.
 
 
-<a href="/test/">Test</a>
